test/parser/should_fail/expr4.souc.bad
import mportant

main() = do
	print (expr++)
end main
